--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
       rel="stylesheet"
     />
 
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="manifest" href="./favicon/site.webmanifest">
+
     <link rel="stylesheet" href="style.css" />
-    <title>Bankist</title>
+    <title>TBC - Bank</title>
   </head>
   <body>
 
